# SESExtension

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
UIExtension/: cexports.cpp  environment.h  uiextension_library.cpp
src/: CMakeLists.txt  cexports.cpp  cexports.def  clients.h  environment.cpp  environment.h  uiextension_library.cpp  uiextension_library.h  zmqclient.cpp
